refactor to use JDBI3 instead of hibernate and add Job to scrap data